6° Commit - implementação do Identity

--- a/Asp.NetAT/appsettings.json
+++ b/Asp.NetAT/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AspNetATContext": "Server=(localdb)\\mssqllocaldb;Database=AspNetATContext-3bb881bc-facf-448d-b2cf-1998a7168907;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AspNetATContext": "Server=(localdb)\\mssqllocaldb;Database=AspNetATContext-3bb881bc-facf-448d-b2cf-1998a7168907;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Asp.NetAT;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
