--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Asp.NetAT;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AspNetATContext": "Server=(localdb)\\mssqllocaldb;Database=AspNetATContext-3bb881bc-facf-448d-b2cf-1998a7168907;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
