10 commit - retoques terminados

--- a/Asp.NetAT/appsettings.json
+++ b/Asp.NetAT/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Asp.NetAT;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ApiAddresses": {
+    "Banda": "https://localhost:44312/api/v1/BandaApi/",
+    "Musico": "https://localhost:44312/api/v1/MusicoApi/"
   }
 }
